--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,13 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  fonts:
+    - family: Jost
+      fonts:
+        - asset: fonts/Jost-Light.ttf
+        - asset: fonts/Jost-Regular.ttf
+          weight: 400
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
