sketch of cards in home screen... app font changed to Montserrat

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,11 +54,15 @@ flutter:
 
 
   fonts:
-    - family: Jost
+    - family: Montserrat
       fonts:
-        - asset: assets/fonts/Jost-Light.ttf
-        - asset: assets/fonts/Jost-Regular.ttf
+        - asset: assets/fonts/Montserrat-Light.ttf
+        - asset: assets/fonts/Montserrat-Regular.ttf
           weight: 400
+        - asset: assets/fonts/Montserrat-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Montserrat-SemiBold.ttf
+          weight: 600
 
   # To add assets to your application, add an assets section, like this:
   # assets:
