--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   cupertino_icons: ^0.1.3
   provider: ^4.1.2
   rxdart: ^0.24.1
+  firebase_auth: ^0.16.1
+  sqflite: ^1.3.1
+
 
 dev_dependencies:
   flutter_test:
