--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   rxdart: ^0.24.1
   firebase_auth: ^0.16.1
   sqflite: ^1.3.1
+  android_alarm_manager: ^0.4.5+11
+  flutter_ringtone_player: ^2.0.0
 
 
 dev_dependencies:
