--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   sqflite: ^1.3.1
   android_alarm_manager: ^0.4.5+11
   flutter_ringtone_player: ^2.0.0
+  equatable: ^1.2.2
 
 
 dev_dependencies:
