--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
-
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="keep_notes_clone"
@@ -44,18 +43,12 @@
             </intent-filter>
         </activity>
 
-        <service
-          android:name="io.flutter.plugins.androidalarmmanager.AlarmService"
-          android:permission="android.permission.BIND_JOB_SERVICE"
-          android:exported="false"/>
-        <receiver
-          android:name="io.flutter.plugins.androidalarmmanager.AlarmBroadcastReceiver"
-          android:exported="false"/>
-        <receiver
-          android:name="io.flutter.plugins.androidalarmmanager.RebootBroadcastReceiver"
-          android:enabled="false">
+        <receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver" />
+
+        <receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver">
           <intent-filter>
-            <action android:name="android.intent.action.BOOT_COMPLETED"></action>
+            <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            <action android:name="android.intent.action.MY_PACKAGE_REPLACED"/>
           </intent-filter>
         </receiver>
 
