--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,9 @@ dependencies:
   provider: ^4.1.2
   rxdart: ^0.24.1
   sqflite: ^1.3.1
-  android_alarm_manager: ^0.4.5+11
-  flutter_ringtone_player: ^2.0.0
   equatable: ^1.2.2
+  flutter_local_notifications: ^1.4.4+2
+
 
 
 dev_dependencies:
