--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   equatable: ^1.2.2
   flutter_local_notifications: ^1.4.4+2
   firebase_auth: ^0.18.0+1
+  cloud_firestore: ^0.14.0+2
+  connectivity: ^0.4.9+2
 
 
 
