--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   cloud_firestore: ^0.14.0+2
   connectivity: ^0.4.9+2
 
+  sembast: ^2.4.8
+  path_provider: ^1.6.24
+
 
 
 dev_dependencies:
